// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxField should render component with disabled state 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
        disabled=""
      >
        <input
          class="c1"
          data-testid="element"
          disabled=""
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            class="c4"
            disabled=""
          >
            <div
              aria-hidden="true"
              class="c5"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c6"
          disabled=""
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: not-allowed;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
      disabled=""
    >
      <input
        class="c1"
        data-testid="element"
        disabled=""
        id="checkboxField"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          class="c4"
          disabled=""
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </span>
      </div>
      <div
        class="c6"
        disabled=""
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with required properties 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <input
          class="c1"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c6"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 36px;
  height: 36px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 20px;
  height: 20px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 20px;
  height: 20px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body1Short, 400);
  font-size: var(--admiral-font-size-Body_Body1Short, 16px);
  line-height: var(--admiral-line-height-Body_Body1Short, 20px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <input
        class="c1"
        data-testid="element"
        id="checkboxField"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          class="c4"
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </span>
      </div>
      <div
        class="c6"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CheckboxField should render component with small dimension 1`] = `
{
  "asFragment": [Function],
  "baseElement": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<body>
    <div>
      <label
        class="c0"
        data-field-id="checkboxField"
      >
        <input
          class="c1"
          data-testid="element"
          id="checkboxField"
          type="checkbox"
        />
        <div
          class="c2"
        >
          <div
            class="c3"
          />
          <span
            class="c4"
          >
            <div
              aria-hidden="true"
              class="c5"
              focusable="false"
            />
          </span>
        </div>
        <div
          class="c6"
        >
          text
        </div>
      </label>
    </div>
  </body>,
  "container": .c0 {
  display: inline-flex;
  align-items: flex-start;
  position: relative;
  box-sizing: content-box;
  padding: 0;
  user-select: none;
  cursor: pointer;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset[data-dimension='s'] .c0.c0 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

fieldset:disabled .c0.c0 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  cursor: not-allowed;
}

.c1 {
  appearance: none;
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding: 0;
  margin: 0;
  opacity: 0;
  box-sizing: border-box;
}

.c1 ::-ms-check {
  display: none;
}

.c1:disabled {
  cursor: not-allowed;
}

.c1:disabled:not(:checked)+div>span {
  border-color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
  background-color: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c1:disabled:checked+div>span {
  border-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
  background-color: var(--admiral-color-Primary_Primary30, #A7C7FF);
}

.c1:disabled:checked+div>span *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

.c1:disabled:checked+div>span>svg {
  visibility: visible;
}

.c1:checked:not(:disabled)+div>span {
  border-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
  background-color: var(--admiral-color-Primary_Primary60Main, #0062FF);
}

.c1:checked:not(:disabled)+div>span *[fill^='#'] {
  fill: var(--admiral-color-Special_StaticWhite, #FFFFFF);
}

.c1:checked:not(:disabled)+div>span>svg {
  visibility: visible;
}

.c1:not(:disabled):focus-visible+div {
  outline-offset: 2px;
  outline: var(--admiral-color-Primary_Primary60Main, #0062FF) solid 2px;
}

.c1:not(:disabled):hover:not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):hover:not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled)+div>div {
  visibility: visible;
}

.c1:not(:disabled):active:not(:disabled):not(:disabled):focus-visible+div {
  outline: none;
}

.c1:not(:disabled):active:not(:disabled)+div>div {
  background: var(--admiral-color-Opacity_Press, #0000001F);
}

.c2 {
  box-sizing: border-box;
  padding: 2px;
  pointer-events: none;
  position: relative;
  flex-shrink: 0;
  width: 20px;
  height: 20px;
}

fieldset[data-dimension='s'] .c2 {
  width: 20px;
  height: 20px;
}

.c3 {
  visibility: hidden;
  pointer-events: none;
  position: absolute;
  background: var(--admiral-color-Opacity_Hover, #0000000D);
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 50%;
  width: 32px;
  height: 32px;
  background-color: var(--admiral-color-Opacity_Hover, #0000000D);
}

fieldset[data-dimension='s'] .c3.c3 {
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  pointer-events: none;
  display: inline-block;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border-radius: var(--admiral-border-radius-Small, 4px);
  width: 16px;
  height: 16px;
  outline: 0;
  transition: background 0.1s ease-in;
  line-height: initial;
  background-color: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
  border: 1px solid var(--admiral-color-Neutral_Neutral50, #74767B);
}

fieldset[data-dimension='s'] .c4.c4 {
  width: 16px;
  height: 16px;
}

.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral00, #FFFFFF);
}

fieldset:disabled .c4.c4 *[fill^='#'] {
  fill: var(--admiral-color-Neutral_Neutral10, #EAEBEC);
}

.c5 {
  visibility: hidden;
  width: 16px;
  height: 16px;
  position: absolute;
  margin: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
}

.c6 {
  display: flex;
  flex-direction: column;
  align-content: center;
  margin-top: 2px;
  margin-bottom: 2px;
  margin-left: 8px;
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
  color: var(--admiral-color-Neutral_Neutral90, #252629);
}

fieldset:disabled .c6.c6 {
  color: var(--admiral-color-Neutral_Neutral30, #B2B5B8);
}

fieldset[data-dimension='s'] .c6.c6 {
  font-family: var(--admiral-font-family, 'VTB Group UI', sans-serif);
  font-style: normal;
  font-weight: var(--admiral-font-weight-Body_Body2Short, 400);
  font-size: var(--admiral-font-size-Body_Body2Short, 14px);
  line-height: var(--admiral-line-height-Body_Body2Short, 16px);
  font-feature-settings: 'tnum' on,'lnum' on;
  text-rendering: geometricPrecision;
}

<div>
    <label
      class="c0"
      data-field-id="checkboxField"
    >
      <input
        class="c1"
        data-testid="element"
        id="checkboxField"
        type="checkbox"
      />
      <div
        class="c2"
      >
        <div
          class="c3"
        />
        <span
          class="c4"
        >
          <div
            aria-hidden="true"
            class="c5"
            focusable="false"
          />
        </span>
      </div>
      <div
        class="c6"
      >
        text
      </div>
    </label>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
